fixed tests and add preload option

--- a/tox.ini
+++ b/tox.ini
@@ -4,11 +4,13 @@ skipsdist = True
 
 [testenv]
 commands =
-  py.test --cov {posargs}
+  py.test --cov . {posargs}
 
 deps =
   pytest-cov
   python-dateutil
+  mock
+  boto3
 
 [testenv:flake8]
 deps =
