#i2 add --keep-snapshot option and tests.

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,6 @@ commands = flake8 .
 
 [flake8]
 ignore = D100, D101, D102, D103, D104, D105, D400, I100, I101
-exclude = tests/*,  build/*, compat.py
+exclude = tests/*,  build/*, compat.py, .tox/*
 max-line-length = 160
 import-order-style = google
