--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,9 @@
 [tox]
-envlist = py27, py33, py34, py35, flake8
+envlist = py27, py36, flake8
 skipsdist = True
 
 [testenv]
-commands =
-  py.test --cov . {posargs}
+commands = py.test {posargs}
 
 deps =
   pytest-cov
